samples/_failures_safe/1761468674_f8a773_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_453b6175.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_453b6175.c:150:11: error: expected ‘;’ at end of input
  150 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_453b6175.c:150:5: error: expected declaration or statement at end of input
  150 |     printf
      |     ^~~~~~
